--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,25 @@
-sudo: false
-
 language: python
 python:
+  - "3.8"
+  - "3.7"
+  - "3.6"
   - "2.7"
-  - "3.5"
-  - "pypy"
 
 env:
   - TOXENV=py
 
-cache:
-  directories:
-    - $HOME/.cache/pip
+cache: pip
 
 before_install:
   - pip install -U pip
 install:
-  - pip install -U coveralls tox
+  - pip install -U codecov tox
 
 script:
   - python setup.py test
 
 after_success:
-  - coveralls
+  - codecov
 
 branches:
   only:
