--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,18 @@
 [tox]
-envlist = py{27,35}
+envlist =
+    lint
+    py{27,35}
 
 [testenv]
+usedevelop = True
 deps =
-    flake8
     pytest
     pytest-cov
 
 commands =
-    # Need editable install for coverage reporting.
-    pip install -e .
-
-    flake8 .
     pytest --cov
+
+[testenv:lint]
+deps = pre-commit
+skip_install = true
+commands = pre-commit run --all-files
