--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,14 @@
 [tox]
 envlist =
     lint
-    py{27,35}
+    py{36,37,38}
 
 [testenv]
 usedevelop = True
 deps =
     pytest
     pytest-cov
-
-commands =
-    pytest --cov
+commands = pytest --cov
 
 [testenv:lint]
 deps = pre-commit
