chore: Update CI (#31)

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 [tox]
-envlist = py{27,35}
+envlist =
+    lint
+    py{36,37,38}
 
 [testenv]
+usedevelop = True
 deps =
-    flake8
     pytest
     pytest-cov
+commands = pytest --cov
 
-commands =
-    # Need editable install for coverage reporting.
-    pip install -e .
-
-    flake8 .
-    pytest --cov
+[testenv:lint]
+deps = pre-commit
+skip_install = true
+commands = pre-commit run --all-files
